<?xml version="1.0" encoding="utf-8"?>

<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/warning_text"
            android:gravity="center"
            android:padding="12dp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_exclamation_96dp"
            android:paddingBottom="6dp"/>

        <TextView
            android:id="@+id/answer_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="12dp"
            tools:text="@string/question_0_AnswerVar1" />

        <Button
            android:id="@+id/show_answer_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show_answer_button"/>

    </LinearLayout>

    <Button
        android:id="@+id/help_activity_finish_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:layout_gravity="bottom|end"
        android:text="@string/activity_finish_button"/>

</FrameLayout>