<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_question_96dp"
            android:paddingBottom="6dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <Button
                android:id="@+id/answer_var1_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/question_test_AnswerVar1" />

            <Button
                android:id="@+id/answer_var2_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/question_test_AnswerVar2" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/question_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center"
        android:padding="12dp"
        android:gravity="center"
        tools:text="@string/question_test" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="bottom|start"
        android:gravity="center"
        android:layout_margin="12dp">

        <TextView
            android:id="@+id/help_count_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="3dp"
            tools:text="3"/>

        <Button
            android:id="@+id/help_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help_button" />

    </LinearLayout>

    <Button
        android:id="@+id/question_next_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="12dp"
        tools:text="@string/next_button" />

</FrameLayout>

